--- a/panoramic-monitor-manage-api/pom.xml
+++ b/panoramic-monitor-manage-api/pom.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>panoramic-monitor-manage</artifactId>
-        <groupId>com.it.sunder</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<artifactId>panoramic-monitor-manage</artifactId>
+		<groupId>com.it.sunder</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.it.sunder</groupId>
-    <artifactId>panoramic-monitor-manage-api</artifactId>
-    <properties>
-        <java.version>1.8</java.version>
-        <encoding.version>UTF-8</encoding.version>
-    </properties>
-<dependencies>
-    <dependency>
-        <groupId>com.it.sunder</groupId>
-        <artifactId>panoramic-monitor-manage-dao</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </dependency>
-</dependencies>
-<build>        <plugins>            <plugin>                <groupId>org.springframework.boot</groupId>                <artifactId>spring-boot-maven-plugin</artifactId>                <configuration>                    <fork>true</fork>                </configuration>                <executions>                    <execution>                        <goals>                            <goal>repackage</goal>                        </goals>                    </execution>                </executions>            </plugin>        </plugins>    </build></project>
+	<groupId>com.it.sunder</groupId>
+	<artifactId>panoramic-monitor-manage-api</artifactId>
+	<properties>
+		<java.version>1.8</java.version>
+		<encoding.version>UTF-8</encoding.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.it.sunder</groupId>
+			<artifactId>panoramic-monitor-manage-dao</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+</project>
