--- a/panoramic-monitor-invoke/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-invoke/src/main/resources/application-dev.yml
@@ -11,30 +11,52 @@ eureka:
 spring:
   application:
     name: panoramic-monitor-invoke    # 项目名称尽量用小写
-  datasource:                           # 指定数据源
-    platform: mysql                # 指定数据源类型
-#    schema: classpath:schema.sql        # 指定数据库的建表脚本
-#    data: classpath:data.sql            # 指定数据库的insert脚本
+#  datasource:                           # 指定数据源
+#    platform: mysql                # 指定数据源类型
 
+    # 数据库参数  #如果有配置,按照这个配置优先,如果没有按照db.properties配置
+dev:
+  spring:
+    datasource:
+      url: jdbc:mysql://114.55.129.76:3306/xinyi_1.5?useUnicode=true&characterEncoding=utf-8
+      username: root
+      password: newgrading
+      driverClassName: com.mysql.jdbc.Driver
+       # 参数
+      initialSize: 5
+      minIdle: 5
+      maxActive: 20
+      maxWait: 60000
+      timeBetweenEvictionRunsMillis: 60000
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      filters: stat,wall,log4j
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
+custom:
+  datasource:
+    names: sqlserver
+    sqlserver:
+      driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+      url: jdbc:sqlserver://139.196.151.137:1433;databaseName=fhadmin
+      username: sa
+      password: new_Grading_Data_8621
 ## 日志配置
-#logging:
-#  level:
-#    root: INFO
-#    org.hibernate: INFO
-#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-#    org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
-#    com.itmuch.youran.persistence: ERROR
+logging:
+  level:
+    root: INFO
+    org.hibernate: INFO
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
+    com.itmuch.youran.persistence: ERROR
 
 # 热发布插件
-#
 #spring:
-#    devtools:
-#        restart:
-#            #热部署生效
-#          enabled: true
-#            #设置重启的目录
-#            #additional-paths: src/main/java
-#            #classpath目录下的WEB-INF文件夹内容修改不重启
-#          exclude: WEB-INF/**
-
+# devtools:
+#    restart:
+#      additional-paths: src/main/java
