--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -12,12 +12,12 @@
     <properties>
         <dependency.container>provided</dependency.container>
         <dependency.common>provided</dependency.common>
-        <spring-boot.version>1.5.2.RELEASE</spring-boot.version>
+        <spring-boot.version>1.5.4.RELEASE</spring-boot.version>
         <mapstruct.version>1.1.0.Final</mapstruct.version>
         <java.version>1.8</java.version>
         <encoding.version>UTF-8</encoding.version>
 
-        <spring.boot.version>1.5.2.RELEASE</spring.boot.version>
+        <spring.boot.version>1.5.4.RELEASE</spring.boot.version>
         <spring-cloud-dependencies.version>Dalston.SR2</spring-cloud-dependencies.version>
 
         <jackson2.version>2.6.5</jackson2.version>
@@ -591,8 +591,8 @@
         <module>../panoramic-monitor-config-client</module>
         <module>../panoramic-monitor-user</module>
         <module>../panoramic-monitor-scheduled-task</module>
-        <module>../panoramic-monitor-risk-warning</module>
-        <module>../panoramic-monitor-manage</module>
+        <!--<module>../panoramic-monitor-risk-warning</module>-->
+        <!--<module>../panoramic-monitor-manage</module>-->
         <module>../panoramic-monitor-invoke</module>
         
     </modules>
