--- a/panoramic-monitor-user-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-user-provider/src/main/resources/application-dev.yml
@@ -27,7 +27,7 @@ spring:
 dev:
   spring:
     datasource:
-      url: jdbc:mysql://dbserver:3306/panoramic?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://panoramic-test-db:3306/panoramic?useUnicode=true&characterEncoding=utf-8
       username: root
       password: root
       driverClassName: com.mysql.jdbc.Driver
